food detail page working now

--- a/home.html
+++ b/home.html
@@ -23,6 +23,9 @@
         </div>
     </nav>
     <main class="main">
+        <div id="detail">
+
+        </div>
         <img id="wallpaper" src="./Images/Food-wallpaper.jpeg" width="100%" alt="Food-wallpaper">
         <div class="overlay-div">
             <h2 style="text-align: center;"> Meals </h2>  
@@ -33,6 +36,7 @@
             </ul>
             <ul id="search-results">
             </ul>
+
                 
         </div>
     </main>
