--- a/FoodDetail.html
+++ b/FoodDetail.html
@@ -14,7 +14,7 @@
             <ul class="nav-list">
                 <li id="logo"><img src="./Images/logo.png" height="70px" width="70px" alt="logo"></li>
                 <li class="page-links">
-                    <a href="#">Favourite</a>
+                    <a href="Favourite.HTML">Favourite</a>
                     <a href="home.html">Home</a> 
                 </li>
             </ul>
@@ -33,7 +33,7 @@
                 <p id="meal-instructions" class="meal-instructions"></p>
                 <h4> Ingredients</h4>
                 <p id="meal-ingredients" class="ingredient-list"></p>
-                <button id="add-to-favorites" class="add-to-favorites">Add to Favorites</button>
+                <button id="add-to-favorites" class="add-to-favorites">Add Favorites</button>
             </div>
         </div>
     </main>
