--- a/Favourite.HTML
+++ b/Favourite.HTML
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/home.css">
-    <title>Home | Meals</title>
+    <link rel="stylesheet" href="./CSS/fav.css">
+    <title>Favourite | Meals</title>
 </head>
 <body>
     <nav>
@@ -14,7 +15,7 @@
             <ul class="nav-list">
                 <li id="logo"><img src="./Images/logo.png" height="70px" width="70px" alt="logo"></li>
                 <li class="page-links">
-                    <a href="./Favourite.HTML" target="_blank">Favourite</a>
+                    <a href="#">Favourite</a>
                     <a href="#">Home</a>
                     
                 </li>
@@ -23,26 +24,13 @@
         </div>
     </nav>
     <main class="main">
-        <div id="detail">
+        <div id="card-container">
 
-        </div>
-        <img id="wallpaper" src="./Images/Food-wallpaper.jpeg" width="100%" alt="Food-wallpaper">
-        <div class="overlay-div">
-            <h2 style="text-align: center;"> Meals </h2>  
-            <ul id="search-bar">
-                <li class="list-item">
-                    <input id="search-box" type="text" placeholder="Search your today's meal">
-                </li>
-            </ul>
-            <ul id="search-results">
-            </ul>
-
-                
         </div>
     </main>
     <footer>
         <p>Lokesh pal @all rights are reserved</p>
     </footer>
-    <script src="./JS/home.js"></script>
+    <script src="./JS/Fav.js"></script>
 </body>
 </html>
